k8s/lab15/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      tolerations:
        - key: "node"
          operator: "Equal"
          value: "worker"
          effect: "NoSchedule"
      containers:
        - name: nodejs-app
          image: ahmedkhater2611/node-app:latest
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "2"
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-storage
              mountPath: /usr/src/app/logs
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-logs-pvc
